# Fractal_Paint

./: .gitignore  INSTRUCTIONS.md  MATRIX3.cpp  Makefile  README.md  TIMER.cpp  TIMER.h  TRIANGLE.h  TRIANGLE_MESH.cpp  VEC3.h  helper_cuda.h  index.html  package-lock.json  package.json  style.css  tsconfig.json
GLTF/: seastar.gltf  seastar.mtl
GLTF/star/: star.gltf
GPU_Fractal_Gen/: .gitignore  CMakeLists.txt  README.md
GPU_Fractal_Gen/fractalGen/: CMakeLists.txt  CudaMC.cu  CudaMC.h  MC.h  julia.h  mesh.h  triangle.cpp
GPU_Fractal_Gen/fractalGen/Quaternion/: POLYNOMIAL_4D.cpp  POLYNOMIAL_4D.d  POLYNOMIAL_4D.h  QUATERNION.cpp  QUATERNION.d  QUATERNION.h
GPU_Fractal_Gen/sdfGen/: main.d  makelevelset3.d
GPU_Fractal_Gen/src/: main.cpp  main_old.cpp
WEBGPU_Ocean/: index.html  package-lock.json  package.json  vite.config.ts
WEBGPU_Ocean/src/: math_util.ts
src/: main.ts  renderer.ts
src/renderers/: clustered_deferred.ts  debugtex.ts  forward_plus.ts  naive.ts  ocean.ts
src/shaders/: clustered_deferred.fs.wgsl  clustered_deferred_fullscreen.fs.wgsl  clustered_deferred_fullscreen.vs.wgsl  clustering.cs.wgsl  common.wgsl  coral.fs.wgsl  coral.vs.wgsl  fish.cs.wgsl  fish.fs.wgsl  forward_plus.fs.wgsl  fullscreen.vs.wgsl  hex_tiling.wgsl  jellyfish.fs.wgsl  move_lights.cs.wgsl  naive.fs.wgsl  naive.vs.wgsl  ocean.cs.wgsl  ocean.fs.wgsl  ocean.vs.wgsl  ocean_floor.cs.wgsl  ocean_floor.fs.wgsl  ocean_floor.vs.wgsl  ocean_surface.cs.wgsl  ocean_surface.fs.wgsl  scattering.wgsl  (+7 more)
waterprops/: a.csv  b.csv  ciesensitivity.csv  data.json  kd.csv  main.py  parse.ipynb
(+27 files in other folders)
